# rio-chop

./: CHANGES.md  CONTRIBUTING.md  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
rio_chop/: __init__.py  version.py
rio_chop/scripts/: __init__.py  cli.py
tests/: conftest.py  test_cli.py
