[metadata]
version = attr: rio_chop.version.__version__

[bumpversion]
current_version = 0.1.0
commit = True
tag = True
tag_name = {new_version}

[bumpversion:file:rio_chop/version.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[isort]
profile = black
known_third_party = rasterio,morecantile,click,rio_cogeo
default_section = THIRDPARTY

[flake8]
ignore = E501,W503,E203
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-complexity = 14
max-line-length = 90

[mypy]
no_strict_optional = True

[pydocstyle]
select = D1
match = (?!test).*\.py
